add this and prototype

--- a/lessons/14-4.asynchronous-async-await.md
+++ b/lessons/14-4.asynchronous-async-await.md
@@ -115,5 +115,5 @@ async function getCustomerDetails() {
   });
 }
 
-getCustomerDetails().then((data) => console.log(data));
+// Write your code here
 ```
